--- a/Linux/Misc/ssh/config
+++ b/Linux/Misc/ssh/config
@@ -32,3 +32,7 @@ Host sb
     HostName	mysbfiles.stonybrook.edu
     User	weibzhang
     Compression	yes
+Host pi
+    HostName raspberrypi.local
+    User    pi
+    Compression yes
